# Socket-Practice

./: CMakeLists.txt  README.md
app/client/: CMakeLists.txt  client.cpp
app/server/: CMakeLists.txt
src/utils/: CMakeLists.txt
